--- a/app-cliente/pom.xml
+++ b/app-cliente/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		 <groupId>com.mycompany.app</groupId>
-  <artifactId>InfoCliente</artifactId>
+  <artifactId>pbi</artifactId>
   <version>1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.interbank.cliente</groupId>
