--- a/app-cliente/pom.xml
+++ b/app-cliente/pom.xml
@@ -27,7 +27,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<spring-cloud.version>2024.0.0-RC1</spring-cloud.version>
 		<org.mapstruct.version>1.6.3</org.mapstruct.version>
 	</properties>
 	<dependencies>
@@ -84,6 +84,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
@@ -128,10 +132,7 @@
 	                    <path>
 	                        <groupId>org.projectlombok</groupId>
 	                        <artifactId>lombok</artifactId>
-	                        <version>${org.projectlombok.version}</version>
 	                    </path>
-	
-	                    <!-- additional annotation processor required as of Lombok 1.18.16 -->
 	                    <path>
 	                        <groupId>org.projectlombok</groupId>
 	                        <artifactId>lombok-mapstruct-binding</artifactId>
@@ -142,5 +143,14 @@
         	</plugin>					
 		</plugins>
 	</build>
-
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
