--- a/app-config/src/main/resources/configurations/app-eureka.yml
+++ b/app-config/src/main/resources/configurations/app-eureka.yml
@@ -10,5 +10,5 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    server-url:
-      defaultZone: http://localhost:${server.port}/eureka/
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
