--- a/app-config/src/main/resources/configurations/app-productos.yml
+++ b/app-config/src/main/resources/configurations/app-productos.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8091
+  port: 0
 spring:
   application:
     name: app-productos
@@ -17,7 +17,7 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
