--- a/app-eureka/pom.xml
+++ b/app-eureka/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.mycompany.app</groupId>
-  <artifactId>InfoCliente</artifactId>
+  <artifactId>pbi</artifactId>
   <version>1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.interbank.eureka</groupId>
@@ -27,7 +27,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<spring-cloud.version>2024.0.0-RC1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,5 +69,14 @@
 			</plugin>
 		</plugins>
 	</build>
-
+<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
